--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -2,6 +2,9 @@
 <div class="container pt-100 mb-5">
     <div class="row">
         <div class="col-3">
+
+            <cart-summary></cart-summary>
+
             <div class="list-group">
                 <a href="#" (click)="changeCategory()" class="list-group-item list-group-item-action">Tüm
                     kategoriler</a>
@@ -29,7 +32,8 @@
                             </div>
                             <div class="card-footer text-center">
                                 <button class="btn btn-outline-primary btn-sm">Details</button>
-                                <button class="btn btn-outline-primary btn-sm ms-3 ">Add to Cart</button>
+                                <button class="btn btn-outline-primary btn-sm ms-3" (click)="addProductToCart(p)">Add to
+                                    Cart</button>
                             </div>
                         </div>
                     </div>
