--- a/src/app/shop/navbar/navbar.component.html
+++ b/src/app/shop/navbar/navbar.component.html
@@ -1,15 +1,15 @@
 <div class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container">
-        <a href="" class="navbar-brand">ShopApp</a>
+        <a [routerLink]="['/shop']" class="navbar-brand">ShopApp</a>
         <ul class="navbar-nav me-auto">
             <li class="navbar-nav">
-                <a href="" class="nav-link active">Home</a>
+                <a [routerLink]="['/shop']" routerLinkActive="router-link-active" class="nav-link active">Home</a>
             </li>
             <li class="navbar-nav">
                 <a href="" class="nav-link">Products</a>
             </li>
             <li class="navbar-nav">
-                <a href="" class="nav-link">Cart</a>
+                <a [routerLink]="['/cart']" class="nav-link">Cart</a>
             </li>
             <li class="navbar-nav">
                 <a href="" class="nav-link">Orders</a>
