--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -18,7 +18,17 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="alert alert-warning">
-                        {{products.length}} tane ürün bulundu.
+                        <div class="form-inline float-end m-0 p-0">
+                            Görüntülenen ürün sayısı <select class="form-control-sm" [value]="productsPerPage"
+                                (change)="changePageSize($any($event.target).value)">
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="6">6</option>
+                                <option value="8">8</option>
+                            </select>
+                        </div>
+                        {{selectedProducts.length}} tane ürün bulundu.
                     </div>
                 </div>
                 <ng-container *ngFor="let p of products">
