--- a/src/app/shop/navbar/navbar.component.html
+++ b/src/app/shop/navbar/navbar.component.html
@@ -1,33 +1,41 @@
 <div class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-    <div class="container">
+    <div class="container-fluid">
+        <!-- Logo -->
         <a [routerLink]="['/shop']" class="navbar-brand">ShopApp</a>
-        <ul class="navbar-nav me-auto">
-            <li class="navbar-nav">
-                <a [routerLink]="['/shop']" routerLinkActive="router-link-active" class="nav-link">Home</a>
-            </li>
-            <li class="navbar-nav">
-                <a [routerLink]="['/shop']" class="nav-link" routerLinkActive="active">Products</a>
-            </li>
-            <li class="navbar-nav nav-item">
-                <a [routerLink]="['/cart']" routerLinkActive="active-link" class="nav-link">Cart</a>
-            </li>
-            <!-- <li class="navbar-nav">
-                <a href="#shop" class="nav-link" routerLinkActive="active">Orders</a>
-            </li>
-            <li class="navbar-nav">
-                <a routerLink="/admin/main" class="nav-link">Admin</a>
-            </li> -->
-        </ul>
-        <ul class="navbar-nav ms-auto">
-            <li class="navbar-nav">
-                <a routerLink="/admin/main" class="nav-link">Login</a>
-            </li>
-            <li class="navbar-nav">
-                <a routerLink="" *ngIf="!isLoggedIn" class="nav-link">Register</a>
-            </li>
-            <li class="navbar-nav">
-                <a href="#" *ngIf="isLoggedIn" class="nav-link">Logout</a>
-            </li>
-        </ul>
+
+        <!-- Hamburger Button -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+            aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navbar İçeriği -->
+        <div class="collapse navbar-collapse" id="navbarScroll" style="--bs-scroll-height: 100px;">
+            <!-- Sol Menüler -->
+            <ul class="navbar-nav me-auto navbar-nav-scroll">
+                <li class="nav-item">
+                    <a [routerLink]="['/shop']" routerLinkActive="router-link-active" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a [routerLink]="['/shop']" class="nav-link" routerLinkActive="active">Products</a>
+                </li>
+            </ul>
+
+            <!-- Sağ Menüler -->
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a [routerLink]="['/cart']" routerLinkActive="active-link" class="nav-link">Cart</a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/admin/main" class="nav-link">Login</a>
+                </li>
+                <li class="nav-item" *ngIf="!isLoggedIn">
+                    <a routerLink="" class="nav-link">Register</a>
+                </li>
+                <li class="nav-item" *ngIf="isLoggedIn">
+                    <a href="#" class="nav-link">Logout</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
