--- a/src/app/shop/product-list/product-list.component.html
+++ b/src/app/shop/product-list/product-list.component.html
@@ -12,7 +12,7 @@
 
 
 <div class="row">
-    <div class="col-md-4" *ngFor="let p of products">
+    <div id="list-products" class="col-md-4" *ngFor="let p of products">
         <div class="card mb-3">
             <img src="/assets/img/{{p.imageUrl}}" alt="{{p.name}}" class="w-50 mx-auto">
             <div class="card-body">
