--- a/src/app/shop/cart-summary/cart-summary.component.html
+++ b/src/app/shop/cart-summary/cart-summary.component.html
@@ -1,4 +1,4 @@
-<div class="alert alert-success">
+<div id="cartSummary" class="alert alert-success">
     <span *ngIf="cart.itemCount>0">
         Sepetinizde {{cart.itemCount}} adet ürün bulunmaktadır.<br>
         Toplam {{cart.total| priceFormat}}<br>
