--- a/src/app/shop/navbar/navbar.component.html
+++ b/src/app/shop/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-    <div class="container" [ngClass]="{'container': screenWidth > 768, 'container-fluid': screenWidth <= 768}">
+    <div class="container">
         <!-- Logo -->
         <a [routerLink]="['/shop']" class="navbar-brand">ShopApp</a>
 
