--- a/src/app/shop/product-list/product-list.component.css
+++ b/src/app/shop/product-list/product-list.component.css
@@ -12,4 +12,17 @@
         /* Kolon genişliği: %50 (1/2) */
         max-width: 100%;
     }
+
+    .margin-product {
+        margin-top: 20px;
+        padding-top: 20px;
+    }
+
+    .list-products {
+        margin: 0px;
+        padding: 0px;
+        width: 100% !important;
+        max-width: 100% !important;
+        padding-left: 0px;
+    }
 }
