--- a/src/app/shop/navbar/navbar.component.css
+++ b/src/app/shop/navbar/navbar.component.css
@@ -4,3 +4,15 @@
         max-width: 100% !important;
     }
 }
+
+.navbar {
+    background-color: var(--color-background) !important;
+    color: var(--color-headline) !important;
+}
+
+a {
+    background-color: var(--color-background) !important;
+    color: var(--color-headline) !important;
+}
+
+#hamburger {}
