--- a/src/app/shop/category-list/category-list.component.css
+++ b/src/app/shop/category-list/category-list.component.css
@@ -3,6 +3,7 @@
         margin: 0px;
         padding: 0px;
         height: 60px;
+        border-radius: 0px;
     }
 
     .bottom-nav {
@@ -31,10 +32,26 @@
     .bottom-nav .nav-item span {
         font-size: 12px;
     }
+
+    button.active {
+        transition: 0s !important;
+    }
 }
 
 @media (min-width: 767px) {
     i {
         display: none;
     }
+}
+
+button {
+    background-color: var(--color-highlight) !important;
+    border-color: var(--color-button) !important;
+    color: var(--color-button-text) !important;
+}
+
+button.active {
+    background-color: var(--color-secondary-light) !important;
+    color: var(--color-headline) !important;
+    transition: 0.5s;
 }
