--- a/src/app/shop/navbar/navbar.component.html
+++ b/src/app/shop/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+<div class="navbar navbar-expand-lg fixed-top">
     <div class="container">
         <!-- Logo -->
         <a [routerLink]="['/shop']" class="navbar-brand">ShopApp</a>
