--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -10,7 +10,7 @@
         <div class="col-9" id="products" [ngClass]="{'col-12': screenWidth<769, 'col-9': screenWidth>768}">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="alert alert-warning">
+                    <div class="alert alert-field">
                         <div class="form-inline float-end m-0 p-0">
                             Görüntülenen ürün sayısı <select class="form-control-sm" [value]="productsPerPage"
                                 (change)="changePageSize($event.target)">
@@ -30,8 +30,8 @@
             <div class="row mt-3">
                 <div class="col">
                     <div class="btn-group">
-                        <button class="btn btn-outline-primary" *ngFor="let page of pageNumbers"
-                            (click)="changePage(page)" [class.active]="page==selectedPage">{{page}}</button>
+                        <button class="btn bottom-paginator" *ngFor="let page of pageNumbers" (click)="changePage(page)"
+                            [class.active]="page==selectedPage">{{page}}</button>
                     </div>
                 </div>
             </div>
