--- a/src/app/shop/cart-summary/cart-summary.component.html
+++ b/src/app/shop/cart-summary/cart-summary.component.html
@@ -2,7 +2,7 @@
     <span *ngIf="cart.itemCount>0">
         Sepetinizde {{cart.itemCount}} adet ürün bulunmaktadır.<br>
         Toplam {{cart.total| priceFormat}}<br>
-        <button class="btn btn-primary mt-3" [routerLink]="['/cart']" routerLinkActive="router-link-active">Sepete
+        <button class="btn button-cart mt-3" [routerLink]="['/cart']" routerLinkActive="router-link-active">Sepete
             git</button>
     </span>
     <span *ngIf="cart.itemCount==0">Sepetinizde henüz ürün bulunmamaktadır.</span>
