--- a/src/app/shop/category-list/category-list.component.css
+++ b/src/app/shop/category-list/category-list.component.css
@@ -52,6 +52,6 @@ button {
 
 button.active {
     background-color: var(--color-secondary-light) !important;
-    color: var(--color-headline) !important;
-    transition: 0.5s;
+    color: var(--color-paragraph) !important;
+    transition: 0.2s;
 }
