--- a/src/app/shop/shop.component.css
+++ b/src/app/shop/shop.component.css
@@ -28,7 +28,7 @@
 }
 
 .bottom-paginator.active {
-    background-color: var(--color-main);
+    background-color: var(--color-secondary-light);
     color: var(--color-button);
 }
 
@@ -38,4 +38,9 @@
 
 .alert-field {
     background-color: var(--color-secondary-light);
+}
+
+.select-page-size {
+    background-color: var(--color-background);
+    color: var(--color-headline);
 }
