--- a/src/app/shop/navbar/navbar.component.css
+++ b/src/app/shop/navbar/navbar.component.css
@@ -15,4 +15,31 @@ a {
     color: var(--color-headline) !important;
 }
 
-#hamburger {}
+.nav-link {
+    display: inline-block;
+    position: relative;
+}
+
+.nav-link::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--color-highlight);
+    transition: transform 0.1s ease-out;
+}
+
+.nav-link:hover::after {
+    transform: scaleX(1);
+}
+
+.nav-link::after {
+    transform-origin: bottom right;
+}
+
+.nav-link:hover::after {
+    transform-origin: bottom left;
+}
