--- a/src/app/admin/categories/category-form/category-form.component.html
+++ b/src/app/admin/categories/category-form/category-form.component.html
@@ -9,8 +9,8 @@
     </div>
 
 
-    <button type="submit" class="btn btn-primary mt-2">
+    <button type="submit" class="btn button-new mt-2">
         {{editing ? "Edit" : "Create" }} Category
     </button>
-    <button class="btn btn-outline-primary mt-2" routerLink="/admin/main/products">Cancel</button>
+    <button type="button" class="btn button-edit mt-2 ms-2" routerLink="/admin/main/categories">Cancel</button>
 </form>
