--- a/src/app/admin/categories/category-list/category-list.component.html
+++ b/src/app/admin/categories/category-list/category-list.component.html
@@ -3,19 +3,19 @@
         <tr>
             <th></th>
             <th>Name</th>
-            <th></th>
+
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let item of getCategories()">
             <td>{{item.name}}</td>
             <td>
-                <button class="btn btn-warning" [routerLink]="['/admin/main/categories/edit',item.id]"
+                <button class="btn button-edit" [routerLink]="['/admin/main/categories/edit',item.id]"
                     routerLinkActive="router-link-active">Edit</button>
-                <button class="btn btn-danger ms-2" (click)="deleteCategory(item)">Delete</button>
+                <button class="btn button-delete ms-2" (click)="deleteCategory(item)">Delete</button>
             </td>
         </tr>
     </tbody>
 </table>
 
-<button class="btn btn-primary" routerLink="/admin/main/categories/create">New Category</button>
+<button class="btn button-new" routerLink="/admin/main/categories/create">New Category</button>
