--- a/src/app/admin/products/product-list/product-list.component.html
+++ b/src/app/admin/products/product-list/product-list.component.html
@@ -4,7 +4,7 @@
 
 </div>
 
-<button [hidden]="isLoading" class="btn btn-primary" routerLink="/admin/main/products/create">Yeni Ürün</button>
+<button [hidden]="isLoading" class="btn button-new" routerLink="/admin/main/products/create">Yeni Ürün</button>
 <table [hidden]="isLoading" class="table table-hover table-striped">
     <thead>
         <tr>
@@ -23,9 +23,9 @@
             <td>{{item.name}}</td>
             <td>{{item.price! | priceFormat}}</td>
             <td>
-                <button class="btn btn-warning" [routerLink]="['/admin/main/products/edit',item.id]"
+                <button class="btn button-edit" [routerLink]="['/admin/main/products/edit',item.id]"
                     routerLinkActive="router-link-active">Edit</button>
-                <button class="btn btn-danger ms-2" (click)="deleteProduct(item)">Delete</button>
+                <button class="btn button-delete ms-2" (click)="deleteProduct(item)">Delete</button>
             </td>
         </tr>
     </tbody>
