--- a/src/app/shop/cart-detail/cart-detail.component.css
+++ b/src/app/shop/cart-detail/cart-detail.component.css
@@ -9,16 +9,24 @@
 th {
     background-color: var(--color-card-background);
     color: var(--color-headline);
+    border-color: var(--color-highlight);
 }
 
 td {
     background-color: var(--color-card-background);
     color: var(--color-headline);
+    border-color: var(--color-highlight);
 }
 
 .button-remove {
     background-color: var(--color-tertiary);
     color: var(--color-main);
+}
+
+.button-remove:hover {
+    background-color: var(--color-main);
+    color: var(--color-tertiary);
+    border: 1px solid var(--color-tertiary);
 }
 
 .input-quantity {
@@ -36,4 +44,5 @@ td {
 .button-payment:hover {
     background-color: var(--color-main);
     color: var(--color-button);
+    border: 1px solid var(--color-button);
 }
