--- a/src/app/shop/cart-summary/cart-summary.component.css
+++ b/src/app/shop/cart-summary/cart-summary.component.css
@@ -18,4 +18,9 @@
 .button-cart:hover {
     background-color: var(--color-main);
     color: var(--color-button);
+    border: 1px solid var(--color-button);
+}
+
+.label-total {
+    color: var(--color-tertiary);
 }
