--- a/src/app/shop/category-list/category-list.component.css
+++ b/src/app/shop/category-list/category-list.component.css
@@ -14,7 +14,6 @@
         flex-direction: row;
         justify-content: space-around;
         background-color: #fff;
-        border-top: 1px solid #ccc;
         z-index: 1000;
     }
 
@@ -33,7 +32,12 @@
         font-size: 12px;
     }
 
+    button {
+        border: 0px !important;
+    }
+
     button.active {
+        border: 0px !important;
         transition: 0s !important;
     }
 }
@@ -45,13 +49,19 @@
 }
 
 button {
+    background-color: var(--color-secondary-light) !important;
+    color: var(--color-paragraph) !important;
+    border: 1px solid var(--color-highlight);
+}
+
+button.active {
     background-color: var(--color-highlight) !important;
     border-color: var(--color-button) !important;
     color: var(--color-button-text) !important;
 }
 
-button.active {
-    background-color: var(--color-secondary-light) !important;
-    color: var(--color-paragraph) !important;
+button:hover {
+    background-color: var(--color-paragraph) !important;
+    color: var(--color-secondary-light) !important;
     transition: 0.2s;
 }
