--- a/src/app/shop/navbar/navbar.component.html
+++ b/src/app/shop/navbar/navbar.component.html
@@ -1,7 +1,10 @@
 <div class="navbar navbar-expand-lg fixed-top">
     <div class="container">
         <!-- Logo -->
-        <a [routerLink]="['/shop']" class="navbar-brand">ShopApp</a>
+        <a [routerLink]="['/shop']" class="navbar-brand">
+            <img src="assets/logo.png" width="40px" alt="">
+            ShopApp
+        </a>
 
         <!-- Hamburger Button -->
         <button id="hamburger" class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
@@ -27,8 +30,11 @@
                 <li class="nav-item">
                     <a [routerLink]="['/cart']" routerLinkActive="active-link" class="nav-link">Cart</a>
                 </li>
+                <li class="nav-item" *ngIf="isLoggedIn">
+                    <a routerLink="/admin/main" class="nav-link">Admin Panel</a>
+                </li>
                 <li class="nav-item">
-                    <a routerLink="/admin/main" class="nav-link">Login</a>
+                    <a routerLink="/admin/main" *ngIf="!isLoggedIn" class="nav-link">Login</a>
                 </li>
                 <li class="nav-item" *ngIf="!isLoggedIn">
                     <a routerLink="" class="nav-link">Register</a>
