--- a/src/app/shop/product-list/product-list.component.css
+++ b/src/app/shop/product-list/product-list.component.css
@@ -52,6 +52,7 @@ button {
 button:hover {
     background-color: var(--color-main) !important;
     color: var(--color-button);
+    border: 1px solid var(--color-button);
 }
 
 .hide-details {
@@ -60,4 +61,18 @@ button:hover {
 
 .product-description {
     color: var(--color-paragraph);
+}
+
+.view-product {
+    background-color: var(--color-background) !important;
+    color: var(--color-paragraph) !important;
+    border: 1px solid var(--color-paragraph) !important;
+}
+
+.view-product {
+    border: 1px solid var(--color-paragraph) !important;
+}
+
+.margin-product {
+    border-color: var(--color-highlight);
 }
