--- a/src/app/shop/shop.component.css
+++ b/src/app/shop/shop.component.css
@@ -23,13 +23,16 @@
 }
 
 .bottom-paginator {
-    background-color: var(--color-button);
-    color: var(--color-main);
+    background-color: var(--color-secondary-light);
+    color: var(--color-button);
+    border: 1px solid var(--color-button);
 }
 
 .bottom-paginator.active {
-    background-color: var(--color-secondary-light);
-    color: var(--color-button);
+
+
+    background-color: var(--color-button);
+    color: var(--color-main);
 }
 
 .container {
