--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,17 @@
 html {
     overflow-y: scroll;
     background-color: var(--color-background);
+
+
+    font-family: "Jaro", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
 
 body {
     background-color: var(--color-background) !important;
+    font-family: "Lato", sans-serif !important;
+    font-weight: 400;
+    font-style: normal;
 }
