--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -11,11 +11,11 @@
             <div class="col-3">
                 <div class="list-group">
                     <button routerLinkActive="active" routerLink="/admin/main/products"
-                        class="category-list w-100 list-group-item list-group-item-action">Products</button>
+                        class="category-list w-100 list-group-item list-group-item-action">Ürünler</button>
                     <button routerLinkActive="active" routerLink="/admin/main/categories"
-                        class="category-list w-100 list-group-item list-group-item-action">Categories</button>
+                        class="category-list w-100 list-group-item list-group-item-action">Kategoriler</button>
                     <button routerLinkActive="active" routerLink="/admin/main/orders"
-                        class="category-list w-100 list-group-item list-group-item-action">Orders</button>
+                        class="category-list w-100 list-group-item list-group-item-action">Siparişler</button>
                 </div>
             </div>
             <div class="col-9">
