--- a/src/app/shop/product-list/product-list.component.html
+++ b/src/app/shop/product-list/product-list.component.html
@@ -6,7 +6,7 @@
     <div class="col-md-10">
         <h5 class="card-title">{{selectedProduct.name}}</h5>
         <p class="card-text mt-2 product-description">{{selectedProduct.description}} </p>
-        <button class="btn btn-sm hide-details" (click)="hideDetails()">İptal</button>
+        <button class="btn btn-sm hide-details" (click)="hideDetails()">Kapat</button>
     </div>
 </div>
 
