--- a/src/app/admin/auth/auth.component.html
+++ b/src/app/admin/auth/auth.component.html
@@ -4,21 +4,20 @@
     {{errorMessage}}
 </div>
 
-<div class="position-absolute top-50 start-50 translate-middle border bg-secondary-subtle w-25">
+<div class="position-absolute top-50 start-50 translate-middle border login">
     <div class="p-5">
         <form #form="ngForm" (ngSubmit)="login(form)">
             <div class="form-group">
-                <label>Username</label>
-                <input type="text" name="username" class="form-control rounded-5 mt-2" [(ngModel)]="username" required>
+                <label>Kullanıcı adı</label>
+                <input type="text" name="username" class="form-control mt-2" [(ngModel)]="username" required>
             </div>
-            <div class="form-group">
-                <label>Password</label>
-                <input type="password" name="password" class="form-control rounded-5 mt-2" [(ngModel)]="password"
-                    required>
+            <div class="form-group mt-2">
+                <label>Şifre</label>
+                <input type="password" name="password" class="form-control mt-2" [(ngModel)]="password" required>
             </div>
             <div class="text-center mt-4">
-                <button class="btn btn-secondary rounded-5" routerLink="/">Geri dön</button>
-                <button type="submit" class="btn btn-primary ms-2 rounded-5">Login</button>
+                <button type="submit" class="btn button-login w-100">Giriş yap</button>
+                <button class="btn button-back mt-2 w-100" routerLink="/">Geri dön</button>
             </div>
         </form>
     </div>
