--- a/src/app/admin/categories/category-list/category-list.component.html
+++ b/src/app/admin/categories/category-list/category-list.component.html
@@ -1,9 +1,9 @@
 <table class="table table-hover table-striped">
     <thead>
         <tr>
-            <th></th>
-            <th>Name</th>
 
+            <th>Kategori adı</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -11,11 +11,11 @@
             <td>{{item.name}}</td>
             <td>
                 <button class="btn button-edit" [routerLink]="['/admin/main/categories/edit',item.id]"
-                    routerLinkActive="router-link-active">Edit</button>
-                <button class="btn button-delete ms-2" (click)="deleteCategory(item)">Delete</button>
+                    routerLinkActive="router-link-active">Düzenle</button>
+                <button class="btn button-delete ms-2" (click)="deleteCategory(item)">Sil</button>
             </td>
         </tr>
     </tbody>
 </table>
 
-<button class="btn button-new" routerLink="/admin/main/categories/create">New Category</button>
+<button class="btn button-new" routerLink="/admin/main/categories/create">Yeni kategori</button>
