--- a/src/app/admin/products/product-form/product-form.component.html
+++ b/src/app/admin/products/product-form/product-form.component.html
@@ -1,31 +1,31 @@
 <h5>
-    {{editing ? "Edit" : "Create" }} Product
+    Ürün {{editing ? "Düzenle" : "Oluştur" }}
 </h5>
 
 <form #form="ngForm" (ngSubmit)="save(form)">
     <div class="form-group">
-        <label>Name</label>
-        <input class="form-control" name="name" [(ngModel)]="product.name">
+        <label>Ürün adı</label>
+        <input class="form-control mt-1" name="name" [(ngModel)]="product.name">
     </div>
 
-    <div class="form-group">
-        <label>Price</label>
-        <input class="form-control" name="price" [(ngModel)]="product.price">
+    <div class="form-group mt-2">
+        <label>Ürün fiyatı</label>
+        <input class="form-control mt-1" name="price" [(ngModel)]="product.price">
     </div>
 
-    <div class="form-group">
-        <label>Image</label>
-        <input class="form-control" name="imageUrl" [(ngModel)]="product.imageUrl">
+    <div class="form-group mt-2">
+        <label>Resim yolu</label>
+        <input class="form-control mt-1" name="imageUrl" [(ngModel)]="product.imageUrl">
     </div>
 
-    <div class="form-group">
-        <label>Description</label>
-        <textarea class="form-control" name="description" [(ngModel)]="product.description"></textarea>
+    <div class="form-group mt-2">
+        <label>Açıklama</label>
+        <textarea class="form-control mt-1" name="description" [(ngModel)]="product.description"></textarea>
     </div>
 
     <button type="submit" class="btn button-new mt-2">
-        {{editing ? "Edit" : "Create" }} Product
+        Ürün {{editing ? "Düzenle" : "Oluştur" }}
     </button>
 
-    <button class="btn button-edit mt-2 ms-2" routerLink="/admin/main/products">Cancel</button>
+    <button class="btn button-edit mt-2 ms-2" routerLink="/admin/main/products">İptal et</button>
 </form>
