--- a/src/app/admin/products/product-list/product-list.component.html
+++ b/src/app/admin/products/product-list/product-list.component.html
@@ -1,16 +1,16 @@
 <div *ngIf="isLoading" class="loading-overlay">
     <div class="loader"></div>
-    <span class="loading ms-2">Loading...</span>
+    <span class="loading ms-2">Yükleniyor...</span>
 
 </div>
 
 <button [hidden]="isLoading" class="btn button-new" routerLink="/admin/main/products/create">Yeni Ürün</button>
-<table [hidden]="isLoading" class="table table-hover table-striped">
+<table [hidden]="isLoading" class="table table-hover table-striped mt-2">
     <thead>
         <tr>
             <th></th>
-            <th>Name</th>
-            <th>Price</th>
+            <th>Ürün adı</th>
+            <th>Ürün fiyatı</th>
             <th></th>
         </tr>
     </thead>
@@ -24,8 +24,8 @@
             <td>{{item.price! | priceFormat}}</td>
             <td>
                 <button class="btn button-edit" [routerLink]="['/admin/main/products/edit',item.id]"
-                    routerLinkActive="router-link-active">Edit</button>
-                <button class="btn button-delete ms-2" (click)="deleteProduct(item)">Delete</button>
+                    routerLinkActive="router-link-active">Düzenle</button>
+                <button class="btn button-delete ms-2" (click)="deleteProduct(item)">Sil</button>
             </td>
         </tr>
     </tbody>
