--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@ html {
 
 body {
     background-color: var(--color-background) !important;
-    font-family: "Lato", sans-serif !important;
+    font-family: "Poppins", sans-serif !important;
     font-weight: 400;
     font-style: normal;
 }
