--- a/src/app/admin/auth/auth.component.html
+++ b/src/app/admin/auth/auth.component.html
@@ -17,7 +17,7 @@
             </div>
             <div class="text-center mt-4">
                 <button type="submit" class="btn button-login w-100">Giriş yap</button>
-                <button class="btn button-back mt-2 w-100" routerLink="/">Geri dön</button>
+                <button class="btn button-back mt-2 w-100" routerLink="/shop">Geri dön</button>
             </div>
         </form>
     </div>
